Updated classes to prevent overflowing

--- a/css/accordion.css
+++ b/css/accordion.css
@@ -50,7 +50,6 @@
   cursor: pointer;
   display: block;
   padding: 4px;
-  width: 100%;
   font-size: 0.875em;
   border-left: 1px solid #90b0d0;
   border-right: 1px solid #90b0d0;
@@ -63,7 +62,6 @@
   display: block;
   padding: 4px;
   font-size: 0.75em;
-  width: 100%;
   border-left: 1px solid #90b0d0;
   border-right: 1px solid #90b0d0;
   border-bottom: 1px solid #90b0d0;
